Add slides for lecture 10

--- a/src/slides.html
+++ b/src/slides.html
@@ -1025,6 +1025,141 @@
   </figure>
 </template>
 
+<template id="lesson10-page1">
+  <h2>
+    Прогресс. Вспоминаем первые лекции.
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page2">
+  <h2>
+    Ожидание реальность
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page3">
+  <h2>
+    Древо скилов
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page4">
+  <h2>
+      Впечатления
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page5">
+  <h2>
+      Эра Курсов
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page6">
+  <h2>
+    Помощь Украине
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page7">
+  <h2>
+    $40 Цена, помощь была и до этого))
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page8">
+  <h2>
+     Смотрим Лекцию
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page9">
+  <h2>
+    Quiz
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page10">
+  <h2>
+    Игра: Добавляем стену летящую на Корабль
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page11">
+  <h2>
+    Игра: Добавляем Кортинке
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page12">
+  <h2>
+    Добавляем переменные: wallX, shipX
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page13">
+  <h2>
+    Двигаем КОртинке
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page14">
+  <h2>
+    Копетан! Столкновение!
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
+<template id="lesson10-page15">
+  <h2>
+    Усе)
+  </h2>
+  <figure>
+    <img src="img/equator.png" />
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
