Add 2 slides for lesson 10

--- a/src/slides.html
+++ b/src/slides.html
@@ -1021,7 +1021,7 @@
     Э-КватоР
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/equator.jpg" />
   </figure>
 </template>
 
@@ -1030,7 +1030,7 @@
     Прогресс. Вспоминаем первые лекции.
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="src/img/equator.jpg" />
   </figure>
 </template>
 
@@ -1038,9 +1038,28 @@
   <h2>
     Ожидание реальность
   </h2>
-  <figure>
-    <img src="img/equator.png" />
-  </figure>
+  <div class="expectation-reality">
+    <h2>
+      Expectation / Reality
+    </h2>
+    <h3>Expectation</h3>
+    <div>
+      <ul>
+        <li>Tony: <input type="text" /></li>
+        <li>Johnny: <input type="text" /></li>
+        <li>Morphem: <input type="text" /></li>
+      </ul>
+    </div>
+
+      <h3>Reality</h3>
+      <div>
+        <ul>
+          <li>Tony: <input type="text" /></li>
+          <li>Johnny: <input type="text" /></li>
+          <li>Morphem: <input type="text" /></li>
+        </ul>
+      </div>
+    </div>
 </template>
 
 <template id="lesson10-page3">
