--- a/src/slides.html
+++ b/src/slides.html
@@ -1195,7 +1195,7 @@
   });
 
   const pageHash = `#${lesson}-page`;
-  let currentPage = parseInt(location.hash.replace(/#lesson[^0-9]+/, '')) || 0;
+  let currentPage = parseInt(location.hash.replace(/#lesson[0-9]+-page/, '')) || 0;
   console.log('current page: ', currentPage);
 
   const nextPage = () => {
