Finish slides for Lesson 10

--- a/src/slides.html
+++ b/src/slides.html
@@ -1030,14 +1030,11 @@
     Прогресс. Вспоминаем первые лекции.
   </h2>
   <figure>
-    <img src="src/img/equator.jpg" />
+    <img src="img/learning-progress.png" />
   </figure>
 </template>
 
 <template id="lesson10-page2">
-  <h2>
-    Ожидание реальность
-  </h2>
   <div class="expectation-reality">
     <h2>
       Expectation / Reality
@@ -1067,7 +1064,7 @@
     Древо скилов
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/skills-tree.png" />
   </figure>
 </template>
 
@@ -1076,7 +1073,7 @@
       Впечатления
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/feedback.png" />
   </figure>
 </template>
 
@@ -1085,7 +1082,7 @@
       Эра Курсов
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/coursera.png" />
   </figure>
 </template>
 
@@ -1094,7 +1091,7 @@
     Помощь Украине
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/coursera-help.png" />
   </figure>
 </template>
 
@@ -1103,7 +1100,7 @@
     $40 Цена, помощь была и до этого))
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/coursera-free-html.png" />
   </figure>
 </template>
 
@@ -1112,7 +1109,9 @@
      Смотрим Лекцию
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <video controls>
+      <source src="asdf.mp4" type="video/mp4" />
+    </video>
   </figure>
 </template>
 
@@ -1120,9 +1119,9 @@
   <h2>
     Quiz
   </h2>
-  <figure>
-    <img src="img/equator.png" />
-  </figure>
+  <p>
+    Take quiz on coursera
+  </p>
 </template>
 
 <template id="lesson10-page10">
@@ -1130,7 +1129,7 @@
     Игра: Добавляем стену летящую на Корабль
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="/src/quests/img/walls.gif" />
   </figure>
 </template>
 
@@ -1139,7 +1138,7 @@
     Игра: Добавляем Кортинке
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="/src/img/ship.gif" />
   </figure>
 </template>
 
@@ -1147,9 +1146,9 @@
   <h2>
     Добавляем переменные: wallX, shipX
   </h2>
-  <figure>
-    <img src="img/equator.png" />
-  </figure>
+  <p>
+    ПЕрменнные 
+  </p>
 </template>
 
 <template id="lesson10-page13">
@@ -1157,7 +1156,7 @@
     Двигаем КОртинке
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="img/vpzdy.jpeg" />
   </figure>
 </template>
 
@@ -1166,7 +1165,7 @@
     Копетан! Столкновение!
   </h2>
   <figure>
-    <img src="img/equator.png" />
+    <img src="/src/quests/img/walls.gif" />
   </figure>
 </template>
 
@@ -1174,9 +1173,7 @@
   <h2>
     Усе)
   </h2>
-  <figure>
-    <img src="img/equator.png" />
-  </figure>
+  <p>FIN</p>
 </template>
 
 <script>
