Start adding lecture 11

--- a/src/slides.html
+++ b/src/slides.html
@@ -1124,7 +1124,36 @@
   </p>
 </template>
 
+
 <template id="lesson10-page10">
+  <h2>
+    Усе)
+  </h2>
+  <p>FIN</p>
+</template>
+
+<template id="lesson11-page0">
+  <h2>
+    СМотрем лекцию )
+  </h2>
+  <p>
+    <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/4WxEp/lecture-12-anatomy-of-a-css-rule">
+      Lecture: Anatomy of a CSS rule
+    </a>
+  </p>
+</template>
+
+<template id="lesson11-page1">
+  <h2>
+    Проходим тест на 3 вопроса)
+  </h2>
+  <p>
+    <a href=" https://www.coursera.org/learn/html-css-javascript-for-web-developers/quiz/UKQ0i/optional-practice-quiz">
+      Quiz
+    </a>
+  </p>
+</template>
+<template id="lesson11-page2">
   <h2>
     Игра: Добавляем стену летящую на Корабль
   </h2>
@@ -1133,7 +1162,7 @@
   </figure>
 </template>
 
-<template id="lesson10-page11">
+<template id="lesson11-page3">
   <h2>
     Игра: Добавляем Кортинке
   </h2>
@@ -1142,7 +1171,7 @@
   </figure>
 </template>
 
-<template id="lesson10-page12">
+<template id="lesson11-page4">
   <h2>
     Добавляем переменные: wallX, shipX
   </h2>
@@ -1151,7 +1180,7 @@
   </p>
 </template>
 
-<template id="lesson10-page13">
+<template id="lesson11-page5">
   <h2>
     Двигаем КОртинке
   </h2>
@@ -1160,7 +1189,7 @@
   </figure>
 </template>
 
-<template id="lesson10-page14">
+<template id="lesson11-page6">
   <h2>
     Копетан! Столкновение!
   </h2>
@@ -1169,11 +1198,15 @@
   </figure>
 </template>
 
-<template id="lesson10-page15">
+<template id="lesson12-page0">
   <h2>
-    Усе)
+    СМотрем лекцию )
   </h2>
-  <p>FIN</p>
+  <p>
+    <a href="https://www.coursera.org/learn/duke-programming-web/lecture/HF2QA/introduction">
+      Lecture: Computational Thinking
+    </a>
+  </p>
 </template>
 
 <script>
