Update lesson11 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -1134,11 +1134,16 @@
 
 <template id="lesson11-page0">
   <h2>
-    СМотрем лекцию )
+    Перменные. СМотрем лекцию )
   </h2>
+  <figure>
+    <video controls>
+      <source src="/src/slides/lesson11/variables.mp4" type="video/mp4" />
+    </video>
+  </figure>
   <p>
-    <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/4WxEp/lecture-12-anatomy-of-a-css-rule">
-      Lecture: Anatomy of a CSS rule
+    <a href="https://www.coursera.org/learn/programming-fundamentals/lecture/otME3/declaring-and-assigning-a-variable">
+      Declaring and Assigning a Variable
     </a>
   </p>
 </template>
