Clean up lecture 11 slides a bit

--- a/src/slides.html
+++ b/src/slides.html
@@ -1132,33 +1132,9 @@
   <p>FIN</p>
 </template>
 
-<template id="lesson11-page0">
-  <h2>
-    Перменные. СМотрем лекцию )
-  </h2>
-  <figure>
-    <video controls>
-      <source src="/src/slides/lesson11/variables.mp4" type="video/mp4" />
-    </video>
-  </figure>
-  <p>
-    <a href="https://www.coursera.org/learn/programming-fundamentals/lecture/otME3/declaring-and-assigning-a-variable">
-      Declaring and Assigning a Variable
-    </a>
-  </p>
-</template>
+<!-- Lesson 11 -->
 
-<template id="lesson11-page1">
-  <h2>
-    Проходим тест на 3 вопроса)
-  </h2>
-  <p>
-    <a href=" https://www.coursera.org/learn/html-css-javascript-for-web-developers/quiz/UKQ0i/optional-practice-quiz">
-      Quiz
-    </a>
-  </p>
-</template>
-<template id="lesson11-page2">
+<template id="lesson11-page0">
   <h2>
     Игра: Добавляем стену летящую на Корабль
   </h2>
@@ -1167,13 +1143,41 @@
   </figure>
 </template>
 
+<template id="lesson11-page1">
+  <h2>
+    Вспоминаем HTML 2.0 - 1995 год.
+  </h2>
+  <h3>
+    БИТВА ПІД ЖОВТИМИ ВОДАМИ БІСТРО ДАТА!!!
+  </h3>
+  <figure>
+    <video controls>
+      <source src="/video/css-lecture.mp4" type="video/mp4" />
+    </video>
+  </figure>
+  <p>
+  <a href="https://www.coursera.org/learn/duke-programming-web/lecture/sSExl/adding-images-and-links">
+    https://www.coursera.org/learn/duke-programming-web/lecture/sSExl/adding-images-and-links
+  </a>
+</template>
+
+<template id="lesson11-page2">
+  <h2>
+    Img Quiz ? 
+  </h2>
+</template>
+
 <template id="lesson11-page3">
   <h2>
     Игра: Добавляем Кортинке
   </h2>
   <figure>
-    <img src="/src/img/ship.gif" />
+    <img src="/img/ice.gif" />
   </figure>
+
+  <p>
+    Ждёмс :)
+  </p>
 </template>
 
 <template id="lesson11-page4">
@@ -1185,7 +1189,25 @@
   </p>
 </template>
 
-<template id="lesson11-page5">
+<!-- Variables lecutre and Quiz -->
+<template id="lesson11-page-5">
+  <h2>
+    Вспоминаем Перменные. СМотрем лекцию )
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/variables-lecture.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson11-page-variables-quiz-snoop-doggo :)">
+  <h2>
+    QUIZ! :)
+  </h2>
+</template>
+
+<template id="lesson11-pageX">
   <h2>
     Двигаем КОртинке
   </h2>
@@ -1194,7 +1216,7 @@
   </figure>
 </template>
 
-<template id="lesson11-page6">
+<template id="lesson11-pageX">
   <h2>
     Копетан! Столкновение!
   </h2>
@@ -1203,13 +1225,44 @@
   </figure>
 </template>
 
-<template id="lesson12-page0">
+<!-- Computational thinking Lecture -->
+
+<template id="lesson12-page-computational-htinking-duke">
   <h2>
     СМотрем лекцию )
   </h2>
   <p>
     <a href="https://www.coursera.org/learn/duke-programming-web/lecture/HF2QA/introduction">
       Lecture: Computational Thinking
+    </a>
+  </p>
+</template>
+
+<!-- Takoe sebe :) 4 min. Anatomy of Css Rule - Duke university -->
+
+<template id="lesson11-page-css-lecture">
+  <h2>
+    CSS Anatomy
+  </h2>
+  <p>
+    <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/4WxEp/lecture-12-anatomy-of-a-css-rule">
+        CSS Anatomy
+    </a>
+  </p>
+</template>
+
+<template id="lesson11-page-css-quiz">
+  <h2>
+      CSS Quiz: 3 Questions
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/variables-lecture.mp4" type="video/mp4" />
+    </video>
+  </figure>
+  <p>
+    <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/quiz/UKQ0i/optional-practice-quiz/attempt">
+        CSS Quiz
     </a>
   </p>
 </template>
