Add lecture for changing page interactively

--- a/src/slides.html
+++ b/src/slides.html
@@ -1230,6 +1230,20 @@
 
 <template id="lesson11-pageX">
   <h2>
+    Изменяем позицию Кортинке из JS
+  </h2>
+  <video controls>
+    <source src="/video/changing-pages-interactively.mp4" type="video/mp4" />
+  </video>
+  <p>
+    <a href="https://www.coursera.org/learn/duke-programming-web/lecture/GZaEV/changing-pages-interactively">
+      https://www.coursera.org/learn/duke-programming-web/lecture/GZaEV/changing-pages-interactively
+    </a>
+  </p>
+</template>
+
+<template id="lesson11-pageX">
+  <h2>
     Копетан! Столкновение!
   </h2>
   <figure>
