Add contitionals lecture video

--- a/src/slides.html
+++ b/src/slides.html
@@ -1163,12 +1163,6 @@
 
 <template id="lesson11-page2">
   <h2>
-    Img Quiz ? 
-  </h2>
-</template>
-
-<template id="lesson11-page3">
-  <h2>
     Игра: Добавляем Кортинке
   </h2>
   <figure>
@@ -1180,7 +1174,7 @@
   </p>
 </template>
 
-<template id="lesson11-page4">
+<template id="lesson11-page3">
   <h2>
     Добавляем переменные: wallX, shipX
   </h2>
@@ -1191,7 +1185,7 @@
 
 <!-- Variables lecutre and Quiz -->
 
-<template id="lesson11-page-5">
+<template id="lesson11-page-4">
   <h2>
     Вспоминаем Перменные. СМотрем лекцию )
   </h2>
@@ -1202,7 +1196,7 @@
   </figure>
 </template>
 
-<template id="lesson11-page-6">
+<template id="lesson11-page-5">
   <h2>
     В Ы Р О Ж Е Н И Я = EXPRESSSIONS
   </h2>
@@ -1237,7 +1231,7 @@
   </video>
   <p>
     <a href="https://www.coursera.org/learn/duke-programming-web/lecture/GZaEV/changing-pages-interactively">
-      https://www.coursera.org/learn/duke-programming-web/lecture/GZaEV/changing-pages-interactively
+      Duke Web Programming: Changing pages interactively
     </a>
   </p>
 </template>
@@ -1249,6 +1243,32 @@
   <figure>
     <img src="/src/quests/img/walls.gif" />
   </figure>
+</template>
+
+<template id="lesson11-pageX">
+  <h2>
+    IF / Else - Conditionals
+  </h2>
+  <video controls>
+    <source src="/video/conditionals-lecture.mp4" type="video/mp4" />
+  </video>
+  <p>
+    <a href="https://www.coursera.org/learn/duke-programming-web/lecture/7A4Ku/conditional-execution">
+      Duke Web Programming: Conditional Execution
+    </a>
+  </p>
+</template>
+
+<!-- Functions Lecture -->
+<template id="lesson12-page-functions">
+  <h2>
+    СМотрем лекцию )
+  </h2>
+  <p>
+    <a href="https://www.coursera.org/learn/duke-programming-web/lecture/vzYV0/functions">
+      Duke Web Programming: functions
+    </a>
+  </p>
 </template>
 
 <!-- Computational thinking Lecture -->
