Finish lesson11 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -1185,7 +1185,7 @@
 
 <!-- Variables lecutre and Quiz -->
 
-<template id="lesson11-page-4">
+<template id="lesson11-page4">
   <h2>
     Вспоминаем Перменные. СМотрем лекцию )
   </h2>
@@ -1196,7 +1196,7 @@
   </figure>
 </template>
 
-<template id="lesson11-page-5">
+<template id="lesson11-page5">
   <h2>
     В Ы Р О Ж Е Н И Я = EXPRESSSIONS
   </h2>
@@ -1207,13 +1207,50 @@
   </figure>
 </template>
 
-<template id="lesson11-page-variables-quiz-snoop-doggo :)">
+<template id="lesson11-page6">
   <h2>
     QUIZ! :)
   </h2>
+  <figure>
+    <video controls>
+      <source src="/video/snoop/snoop-millionare-start.mp4" type="video/mp4" />
+    </video>
+  </figure>
 </template>
 
-<template id="lesson11-pageX">
+<template id="lesson11-page7">
+  <h2>
+    QUIZ! :)
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/snoop/snoop-man-i-seen.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+
+<template id="lesson11-page8">
+  <h2>
+    QUIZ! :)
+  </h2>
+  <figure>
+    <img src="/src/slides/lesson11/variables-quiz-snoop.jpg" />
+  </figure>
+</template>
+
+<template id="lesson11-page9">
+  <h2>
+    She named me Snoopy
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/snoop/snoop-snoopy.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson11-page10">
   <h2>
     Двигаем КОртинке
   </h2>
@@ -1222,13 +1259,15 @@
   </figure>
 </template>
 
-<template id="lesson11-pageX">
+<template id="lesson11-page11">
   <h2>
     Изменяем позицию Кортинке из JS
   </h2>
-  <video controls>
-    <source src="/video/changing-pages-interactively.mp4" type="video/mp4" />
-  </video>
+  <figure>
+    <video controls>
+      <source src="/video/changing-pages-interactively.mp4" type="video/mp4" />
+    </video>
+  </figure>
   <p>
     <a href="https://www.coursera.org/learn/duke-programming-web/lecture/GZaEV/changing-pages-interactively">
       Duke Web Programming: Changing pages interactively
@@ -1236,8 +1275,8 @@
   </p>
 </template>
 
-<template id="lesson11-pageX">
-  <h2>
+<template id="lesson11-page12">
+  <h2>2
     Копетан! Столкновение!
   </h2>
   <figure>
@@ -1245,13 +1284,15 @@
   </figure>
 </template>
 
-<template id="lesson11-pageX">
+<template id="lesson11-page13">
   <h2>
     IF / Else - Conditionals
   </h2>
-  <video controls>
-    <source src="/video/conditionals-lecture.mp4" type="video/mp4" />
-  </video>
+  <figure>
+    <video controls>
+      <source src="/video/conditionals-lecture.mp4" type="video/mp4" />
+    </video>
+  </figure>
   <p>
     <a href="https://www.coursera.org/learn/duke-programming-web/lecture/7A4Ku/conditional-execution">
       Duke Web Programming: Conditional Execution
