Start adding Harvard lecture for lesson 12

--- a/src/slides.html
+++ b/src/slides.html
@@ -1354,6 +1354,22 @@
   </p>
 </template>
 
+<!-- Lesson 12 -->
+
+<template id="lesson12-page0">
+  <h2>
+    Harvard
+  </h2>
+  <a href="https://learning.edx.org/course/course-v1:HarvardX+CS50W+Web/block-v1:HarvardX+CS50W+Web+type@sequential+block@2adc64be866f4d8e99eaf5910ba40f7e/block-v1:HarvardX+CS50W+Web+type@vertical+block@3732bbca90394afd9aeb86c197dfa426">
+    Lecture on edx
+  </a>
+  <figure>
+    <video controls>
+      <source src="/video/harvard-lecture-1-html.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
