Add list of games slide to lecture 12

--- a/src/slides.html
+++ b/src/slides.html
@@ -1370,6 +1370,28 @@
   </figure>
 </template>
 
+<template id="lesson12-page1">
+  <h2>
+    Games
+  </h2>
+  <ul>
+    <li>
+      <a href="https://lab.reaal.me/jsrobot">
+        JS Robot
+      </a>
+    </li>
+    <li>
+      <a href="https://dev.to/suprabhasupi/learn-javascript-coding-by-playing-games-4d8a">
+        List of games
+      </a>
+    </li>
+    <li>
+      <a href="https://softwaredevelopmentinsights.com/15-best-games-to-learn-javascript/">
+        And another list of games :)
+      </a>
+    </li>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
