Add slides for lecture 12

--- a/src/slides.html
+++ b/src/slides.html
@@ -1275,33 +1275,8 @@
   </p>
 </template>
 
-<template id="lesson11-page12">
-  <h2>2
-    Копетан! Столкновение!
-  </h2>
-  <figure>
-    <img src="/src/quests/img/walls.gif" />
-  </figure>
-</template>
-
-<template id="lesson11-page13">
-  <h2>
-    IF / Else - Conditionals
-  </h2>
-  <figure>
-    <video controls>
-      <source src="/video/conditionals-lecture.mp4" type="video/mp4" />
-    </video>
-  </figure>
-  <p>
-    <a href="https://www.coursera.org/learn/duke-programming-web/lecture/7A4Ku/conditional-execution">
-      Duke Web Programming: Conditional Execution
-    </a>
-  </p>
-</template>
-
 <!-- Functions Lecture -->
-<template id="lesson12-page-functions">
+<template id="lesson?-page-functions">
   <h2>
     СМотрем лекцию )
   </h2>
@@ -1314,7 +1289,7 @@
 
 <!-- Computational thinking Lecture -->
 
-<template id="lesson12-page-computational-htinking-duke">
+<template id="lesson?-page-computational-htinking-duke">
   <h2>
     СМотрем лекцию )
   </h2>
@@ -1327,7 +1302,7 @@
 
 <!-- Takoe sebe :) 4 min. Anatomy of Css Rule - Duke university -->
 
-<template id="lesson11-page-css-lecture">
+<template id="lesson?-page-css-lecture">
   <h2>
     CSS Anatomy
   </h2>
@@ -1338,7 +1313,7 @@
   </p>
 </template>
 
-<template id="lesson11-page-css-quiz">
+<template id="lesson?-page-css-quiz">
   <h2>
       CSS Quiz: 3 Questions
   </h2>
@@ -1367,20 +1342,98 @@
 
 <template id="lesson12-page1">
   <h2>
+    СЕРТИФИКАТ
+  </h2>
+  <div style="text-align: center">
+    <p>Пацан болье-меньше шарит онглицки &mdash; отвечаю.</p>
+    <p>B2 уровень нахуй)</p>
+    <img src="/img/napaleon.webp" style="height: 250px" />
+  </div>
+
+</template>
+
+<template id="lesson12-page2">
+  <h2>
     Harvard
   </h2>
-  <a href="https://learning.edx.org/course/course-v1:HarvardX+CS50W+Web/block-v1:HarvardX+CS50W+Web+type@sequential+block@2adc64be866f4d8e99eaf5910ba40f7e/block-v1:HarvardX+CS50W+Web+type@vertical+block@3732bbca90394afd9aeb86c197dfa426">
-    Lecture on edx
-  </a>
   <figure>
     <video controls>
-      <source src="/video/harvard-lecture-1-html.mp4" type="video/mp4" />
+      <source src="/video/harvard/html-intro.mp4" type="video/mp4" />
     </video>
   </figure>
 </template>
 
+<template id="lesson12-page3">
+  <h2>
+    Harvard HTML
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/harvard/html.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
 
-<template id="lesson12-page2">
+<template id="lesson12-page4">
+  <h2>
+    Harvard JS
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/harvard/intro.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson12-page5">
+  <h2>
+    Harvard JS
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/harvard/alert.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson12-page6">
+  <h2>
+    Harvard Functions
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/harvard/functions.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson12-page7">
+  <h2>
+    Копетан! Столкновение!
+  </h2>
+  <figure>
+    <img src="/src/quests/img/walls.gif" />
+  </figure>
+</template>
+
+<template id="lesson12-page8">
+  <h2>
+    IF / Else - Conditionals
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/conditionals-lecture.mp4" type="video/mp4" />
+    </video>
+  </figure>
+  <p>
+    <a href="https://www.coursera.org/learn/duke-programming-web/lecture/7A4Ku/conditional-execution">
+      Duke Web Programming: Conditional Execution
+    </a>
+  </p>
+</template>
+
+
+<template id="lesson12-page9">
   <h2>
     Games
   </h2>
@@ -1452,9 +1505,10 @@
       }
 
       const dictationItems = [
-          ['()', 'parenthesis'],
+          ['()', 'parentheses (одна - parenthesIs)'],
           ['[]', 'brackets'],
           ['{}', 'curly braces'],
+          ['<>', 'angle brackets'],
           ['?', 'question mark'],
           [':', 'colon'],
           [';', 'semicolon'],
@@ -1463,6 +1517,11 @@
           ['&', 'and sign (ampersand)'],
           ['$', 'dollar sign'],
           ['!', 'exclamation mark'],
+          ['отступ', 'indentation'],
+          ['внутри', 'inside'],
+          ['вне', 'outside'],
+          ['изменить', 'modify'],
+          ['элемент', 'element'],
       ];
 
 
