lecture 12 slides improvements

--- a/src/slides.html
+++ b/src/slides.html
@@ -1342,6 +1342,15 @@
 
 <template id="lesson12-page1">
   <h2>
+    СКОБКЕ - ЛАТЫНЬ
+  </h2>
+  <figure>
+    <img src="/img/parentheses-latin.png" />
+  </figure>
+</template>
+
+<template id="lesson12-page2">
+  <h2>
     СЕРТИФИКАТ
   </h2>
   <div style="text-align: center">
@@ -1349,10 +1358,22 @@
     <p>B2 уровень нахуй)</p>
     <img src="/img/napaleon.webp" style="height: 250px" />
   </div>
-
 </template>
 
-<template id="lesson12-page2">
+<template id="lesson12-page3">
+  <h2>
+    Expectation / Reality
+  </h2>
+  <p>
+    <ul>
+      <li>Насколько будет сложно понять английский в лекциях Гарварда? (от 1 до 10)</li>
+      <li>Насколько ты думаешь лекции Гарварда сложные? (от 1 до 10)</li>
+      <li>Насколько ты думаешь на лекциях Гарварда хорошо объяняют?) (от 1 до 10)</li>
+    </ul>
+  </p>
+</template>
+
+<template id="lesson12-page4">
   <h2>
     Harvard
   </h2>
@@ -1363,7 +1384,7 @@
   </figure>
 </template>
 
-<template id="lesson12-page3">
+<template id="lesson12-page5">
   <h2>
     Harvard HTML
   </h2>
@@ -1374,7 +1395,7 @@
   </figure>
 </template>
 
-<template id="lesson12-page4">
+<template id="lesson12-page6">
   <h2>
     Harvard JS
   </h2>
@@ -1385,7 +1406,7 @@
   </figure>
 </template>
 
-<template id="lesson12-page5">
+<template id="lesson12-page7">
   <h2>
     Harvard JS
   </h2>
@@ -1396,7 +1417,7 @@
   </figure>
 </template>
 
-<template id="lesson12-page6">
+<template id="lesson12-page8">
   <h2>
     Harvard Functions
   </h2>
@@ -1407,7 +1428,20 @@
   </figure>
 </template>
 
-<template id="lesson12-page7">
+<template id="lesson12-page9">
+  <h2>
+    Expectation / Reality
+  </h2>
+  <p>
+    <ul>
+      <li>Насколько будет сложно понять английский в лекциях Гарварда? (от 1 до 10)</li>
+      <li>Насколько ты думаешь лекции Гарварда сложные? (от 1 до 10)</li>
+      <li>Насколько ты думаешь на лекциях Гарварда хорошо объяняют?) (от 1 до 10)</li>
+    </ul>
+  </p>
+</template>
+
+<template id="lesson12-page10">
   <h2>
     Копетан! Столкновение!
   </h2>
@@ -1416,7 +1450,7 @@
   </figure>
 </template>
 
-<template id="lesson12-page8">
+<template id="lesson12-page11">
   <h2>
     IF / Else - Conditionals
   </h2>
@@ -1433,7 +1467,7 @@
 </template>
 
 
-<template id="lesson12-page9">
+<template id="lesson12-page12">
   <h2>
     Games
   </h2>
@@ -1505,7 +1539,7 @@
       }
 
       const dictationItems = [
-          ['()', 'parentheses (одна - parenthesIs)'],
+          ['()', 'parentheses'],
           ['[]', 'brackets'],
           ['{}', 'curly braces'],
           ['<>', 'angle brackets'],
