Repair dimon avatar for rating.html

--- a/src/rating.html
+++ b/src/rating.html
@@ -64,7 +64,7 @@
       <img src="/img/tony.jpg" />
     </div>
     <div class="participant">
-      <img src="/img/dimon4ik.jpg" />
+      <img src="/img/dimon.jpg" />
     </div>
 </body>
 
