Add meta viewport initial scale 1

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
 <meta charset="utf-8" />
 <title>HTML School</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="lib/prism.css" rel="stylesheet" />
   <link rel="stylesheet" href="src/index.css" />
 </head>
