Increase quest size to 500x500

--- a/src/slides.html
+++ b/src/slides.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8" />
 <title>Weed</title>
 
+<link href="slides.css" rel="stylesheet" />
 <style type="text/css">
   html, body {
     overflow: hidden;
