Add more lesson 14 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -1490,6 +1490,107 @@
     </li>
 </template>
 
+<template id="lesson14-page0">
+  <h2>
+    Четверьть - Кватор 
+  </h2>
+  <p>
+    1 / 4
+  </p>
+</template>
+
+<template id="lesson14-page1">
+  <h2>
+    План уроке
+  </h2>
+  <p>
+    <ul>Language Drops - спонсор</ul>
+    <ul>Git - Napaleon &quot; Harvard</ul>
+    <ul>Commit &quot; push our code step by step</ul>
+    <ul>Refactoring</ul>
+    <ul>Top down design</ul>
+    <ul></ul>
+  </p>
+</template>
+
+<template id="lesson14-page2">
+  <h2>
+    Language Drops: Спонсор
+  </h2>
+  <p>
+    Спонсор сегодняшнего Урока - LanguageDrops!
+  </p>
+  <p>
+    Переходи по <a href="https://invite.languagedrops.com/kmqR2mWL4KpjR4um9">ССЫЛКЕ</a> и получай ГОД бесплатно 28 языкеов мать ё))
+  </p>
+</template>
+
+<template id="lesson14-page3">
+  <h2>
+    Bonus: Arabic
+  </h2>
+</template>
+
+<template id="lesson14-page4">
+  <h2>
+    Git: Van4ik Demo 5 min
+  </h2>
+</template>
+
+<template id="lesson14-page5">
+  <h2>
+    Великая Триада
+  </h2>
+  <p>
+    <ul>
+      <li>git add .</li>
+      <li>git commit -m "otsosi"</li>
+      <li>git push</li>
+    </ul>
+  </p>
+</template>
+
+<template id="lesson14-page6">
+  <h2>
+    ПУШ ОК. А КАК КОНЧАТЬ?
+  </h2>
+  <p>
+    Чтобы скончать изменения пишем
+    <pre>
+      <code>git pull</code>
+    </pre>
+
+    Все нахуй))
+  </p>
+</template>
+
+
+<template id="lesson14-page7">
+  <h2>
+    Harvard Git 5 min
+  </h2>
+  <figure>
+    <video controls>
+      <source src="/video/harvard/git-intro.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson14-page8">
+  <h2>
+    Let's Go! Вперед мать ё!
+  </h2>
+  <p>
+    Кончаем Репозиторий <code>git clone https://ssilke</code>
+  </p>
+  <p>
+    И по очереди вносим измиенения мать ё.
+  </p>
+  <figure>
+    <img src="img/kriminalnoe-4tivo.png">
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
