Fix lesson 14 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -1587,7 +1587,7 @@
     И по очереди вносим измиенения мать ё.
   </p>
   <figure>
-    <img src="img/kriminalnoe-4tivo.png">
+    <img src="img/kriminalnoe-4tivo.gif">
   </figure>
 </template>
 
