Add quarter equator img to lesson14 :)

--- a/src/slides.html
+++ b/src/slides.html
@@ -1494,9 +1494,12 @@
   <h2>
     Четверьть - Кватор 
   </h2>
-  <p>
-    1 / 4
-  </p>
+  <figure>
+    <img src="img/quarter-equator.png" />
+    <figcaption>
+      Earth planet sliced in half concept art
+    </figcaption>
+  </figure>
 </template>
 
 <template id="lesson14-page1">
