Add lecture 18 tik tok English videos

--- a/src/slides.html
+++ b/src/slides.html
@@ -1594,6 +1594,47 @@
   </figure>
 </template>
 
+<template id="lesson18-page0">
+  <h2>
+    Йоу... Мазафака)))
+  </h2>
+  <p>
+    Тик-ток разминка!
+  </p>
+  <ul>
+    <li>
+      <a href="https://vm.tiktok.com/ZMRe8jQ1E/">Xanax</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZMLeQu5LT/">Boulevard Song</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZM8smEPBe/">Emmie Whitehouse</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZM8gWPaco/">That's a Given</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZM8gWhrA7/">The Office</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZM8xcpQov/">Abba</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZM8HDLMvc/">How I go to work</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZMRK6yuQG/">Grammar</a>
+    </li>
+    <li>
+      <a href="https://vm.tiktok.com/ZMRBTy3uk/">Hardbass</a>
+    </li>
+    <li>
+      <a href="https://www.tiktok.com/@frank_joka/video/7151089988082371845?_t=8WVRE2dY53O&_r=1">India</a>
+    </li>
+  </ul>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
