Add event loop slide

--- a/src/slides.html
+++ b/src/slides.html
@@ -1635,6 +1635,21 @@
   </ul>
 </template>
 
+
+<template id="lesson18-page1">
+  <h2>
+     Event ZeLoop-a
+  </h2>
+  <figure>
+    <img src="img/event-loop.png" />
+    <figcaption>
+      <a href="https://www.youtube.com/watch?v=3naT39judvQ&t=52s">
+        ВИДИО
+      </a>
+    </figcaption>
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
