Add lesson 19 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -1650,6 +1650,135 @@
   </figure>
 </template>
 
+<template id="lesson19-page0">
+  <h2>
+    Уроке №19
+  </h2>
+  <p>
+    Йо :)
+  </p>
+</template>
+
+<template id="lesson19-page1">
+  <h2>
+    Тик ток разминке)
+  </h2>
+  <p>
+    <ul>
+      <li>
+        <a href="https://vm.tiktok.com/ZM8smEPBe/">Emmie Whitehouse</a>
+      </li>
+      <li>
+        <a href="https://vm.tiktok.com/ZM8HDLMvc/">How I go to work</a>
+      </li>
+      <li>
+        <a href="https://www.tiktok.com/@frank_joka/video/7151089988082371845?_t=8WVRE2dY53O&_r=1">India</a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=bZVjtYktPpo">CNN (YouTube)</a>
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=bm7pOJOZd48">Sky News (UK accent)</a>
+      </li>
+    </ul>
+  </p>
+</template>
+
+<template id="lesson19-page2">
+  <h2>
+    Johnny
+  </h2>
+  <p>
+    Level progress feature for the game: code, demo
+  </p>
+</template>
+
+<template id="lesson19-page3">
+  <h2>
+    Tony
+  </h2>
+  <p>
+    What's up with the website :)
+</template>
+
+<template id="lesson19-page4">
+  <h2>
+    Dimon
+  </h2>
+  <p>
+    Michigan week 2
+  </p>
+</template>
+
+<template id="lesson19-page5">
+  <h2>
+    Strings
+  </h2>
+  <p>
+    Стринги)
+  </p>
+  <figure>
+    <img src="img/strings.webp">
+  </figure>
+</template>
+
+<template id="lesson19-page6">
+  <h2>
+    Excel
+  </h2>
+  <p>
+    How to write "+", "-", "=" in a cell? :)
+  </p>
+</template>
+
+<template id="lesson19-page7">
+  <h2>
+    JS: string LITERAL
+  </h2>
+  <p>
+    LITERAL """"""
+  </p>
+</template>
+
+<template id="lesson19-page8">
+  <h2>
+    Data Types
+  </h2>
+  <figure>
+    <img src="img/data-types.png">
+  </figure>
+</template>
+
+<template id="lesson19-page9">
+  <h2>
+    Primitives
+  </h2>
+  <figure>
+    <img src="img/primitives.png">
+  </figure>
+</template>
+
+<template id="lesson19-page10">
+  <h2>
+    Вопросе )
+  </h2>
+  <p>
+    <a href="https://github.com/YauhenKavalchuk/interview-questions/blob/main/questions/js.md">Interview questions</a>
+  </p>
+  <figure>
+    <img src="img/interview-questions.png">
+  </figure>
+</template>
+
+<template id="lesson19-page11">
+  <h2>
+    Игра: 4 стороны?
+  </h2>
+  <p>
+    Или че хтите))
+  </p>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
