Add 1st slide for the 20th lesson

--- a/src/slides.html
+++ b/src/slides.html
@@ -1779,6 +1779,15 @@
   </p>
 </template>
 
+<template id="lesson20-page0">
+  <h2>
+    Двоцатій уроке!!
+  </h2>
+  <figure>
+    <img src="img/screaming-face-meme.png">
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
