Add the 1st slide of 20th lesson

--- a/src/slides.html
+++ b/src/slides.html
@@ -1788,6 +1788,15 @@
   </figure>
 </template>
 
+<template id="lesson20-page0">
+  <h2>
+    Освоили Базу?) Ощущения)
+  </h2>
+  <figure>
+    <img src="img/screaming-face-meme.png">
+  </figure>
+</template>
+
 <script>
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
   console.log('Lesson: ', lesson);
